kube/apps/vnc/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vnc
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
