kube/apps/vnc/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless-vnc
  namespace: vnc
  labels:
    application: headless-vnc
spec:
  replicas: 1
  selector:
    matchLabels:
      application: headless-vnc
  template:
    metadata:
      labels:
        application: headless-vnc
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      terminationGracePeriodSeconds: 5
      containers:
        - name: headless-vnc
          image: consol/rocky-xfce-vnc
          imagePullPolicy: IfNotPresent
          args: []
          livenessProbe:
            tcpSocket:
              port: 5901
            initialDelaySeconds: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 6901
              scheme: HTTP
            initialDelaySeconds: 1
            timeoutSeconds: 1
