kube/apps/vnc/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headless-vnc
  namespace: vnc
  labels:
    application: headless-vnc
spec:
  externalName: headless-vnc
  ports:
  - name: http-port-tcp
    protocol: TCP
    port: 6901
    targetPort: 6901
  selector:
    application: headless-vnc
  type: ClusterIP
