kube/apps/vnc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headless-vnc
  namespace: vnc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: S
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: vnc.S
      http:
        paths:
          - backend:
              service:
                name: headless-vnc
                port:
                  number: 6901
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vnc.S
      secretName: headless-vnc-tls
